--- a/environment.yml
+++ b/environment.yml
@@ -8,9 +8,9 @@ channels: !!python/tuple
 - !!python/unicode
   'defaults'
 dependencies:
-- conda-forge::python=3.6.6
+- conda-forge::python=3.6
 - conda-forge::pip<10
-- conda-forge::rasterio>=1.0.18,<2.0
+- conda-forge::rasterio>=1.0.24,<2.0
 - conda-forge::fiona>=1.8.6,<2.0
 - conda-forge::shapely>=1.6.4,<2.0
 - conda-forge::pyproj>=1.9.6,<2.0
@@ -20,4 +20,5 @@ dependencies:
   - awscli>=1.16.100,<2.0
   - utm==0.4.2
   - sh
-  - "git+https://github.com/johntruckenbrodt/pyroSAR.git"
+  - pyrosar==0.9
+  - sentinelsat==0.13
